<resources>
    <string name="app_name">FreshFish</string>
    <string name="title_article">Artikel</string>
    <string name="title_scan">Pindai</string>
    <string name="title_history">Riwayat</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="instruction_text">Tekan pilih gambar dari galeri atau ambil foto untuk mendeteksi kesegaran ikan!</string>
    <string name="choose_gallery">Pilih Melalui Galeri</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="alert">!Pastikan Seluruh Badan Ikan Terlihat Dengan Benar/Jelas</string>
    <string name="analyze">Analisa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hasil_analisis">Hasil Analisis</string>
    <string name="hasil_kesegaran">Hasil Kesegaran</string>
    <string name="save_and_back">Simpan dan kembali</string>
    <string name="finish">Selesai</string>
    <string name="description_sort">deskripsi singkat artikel</string>
    <string name="description">Deskripsi</string>
    <string name="author">author</string>
    <string name="content">content</string>
</resources>