<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_article">

    <!-- Article Fragment -->
    <fragment
        android:id="@+id/navigation_article"
        android:name="com.dicoding.freshfish.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <!-- Scan Fragment (the starting fragment for scanning images) -->
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.dicoding.freshfish.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <!-- History Fragment -->
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.freshfish.ui.History.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <!-- Result Fragment -->
    <fragment
        android:id="@+id/navigation_result"
        android:name="com.dicoding.freshfish.ui.result.ResultFragment"
        android:label="Result"
        tools:layout="@layout/fragment_result">
        <action
            android:id="@+id/action_result_to_scan"
            app:destination="@id/navigation_scan" />
    </fragment>
</navigation>
