<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/scan_fragment"
    android:padding="16dp"
    tools:context="ui.scan.ScanFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="255dp"
        android:layout_height="226dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/scan"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/instruction_text"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_select_image"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple"
        android:drawableEnd="@drawable/baseline_add_photo_alternate_24"
        android:drawableTint="@color/white"
        android:strokeColor="@color/purple"
        android:text="@string/choose_gallery"
        android:textColor="@color/white"
        android:layout_gravity="center"
        app:cornerRadius="16dp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/button_select_camera"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/purple"
        android:drawableEnd="@drawable/baseline_camera_alt_24"
        android:drawableTint="@color/white"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        app:cornerRadius="16dp" />

    <TextView
        android:id="@+id/warningText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/alert"
        android:textColor="@color/red"
        android:textSize="12sp" />

</LinearLayout>
