<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.result.ResultFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_result"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|top"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/result_scan" />

    <TextView
        android:id="@+id/pesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="150dp"
        android:text="@string/hasil_analisis"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/hasil_pesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="170dp"
        android:text="@string/hasil_analisis"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:gravity="center" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="200dp"
        android:text="@string/hasil_kesegaran"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/hasil_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="220dp"
        android:text="@string/hasil_analisis"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:gravity="center" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="270dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"/>

</FrameLayout>
